Hook up the API

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="re-frame">
   <head>
     <meta charset="utf-8">
-    <title>re-frame • TodoMVC</title>
+    <title>redolist</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
     <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
