Install TodoMVC styles through npm

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link href="css/screen.css" rel="stylesheet" type="text/css">
-    
+
+    <link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+    <link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
   </head>
   <body>
     <div id="app"></div>
